# rustviz2

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Makefile  README.md  SECURITY.md  branch_design.txt  fly.toml  output  run.sh  runtest.py  setup.sh  test-ex.sh
.github/workflows/: build.yml  deploy.yml  pages.yml  runner-image.yml
deploy/: deploy.sh  entrypoint.sh  shutdown.sh
mdbook-rustviz/: Cargo.toml  README.md
mdbook-rustviz/src/: cli.rs  main.rs  preprocessor.rs
mdbook-rustviz/test-book/: book.toml
mdbook-rustviz/test-book/book/: 404.html  additional_resources.html  borrowing.html  motivation.html  ownership.html  print.html  rust-basics.html  searchindex.js  searchindex.json  structs.html  vectors.html
mdbook-rustviz/test-book/src/: structs.md
print/: .gitignore  Cargo.toml  debugging.txt  output  output.txt  result.txt  run.sh  runtest.py  rust-toolchain.toml  temp  temp.sh  test-ex.sh  things_to_fix.txt
print/aquascope/src/analysis/boundaries/: mod.rs
print/example_book/: book.toml
print/example_book/src/: SUMMARY.md  chapter_1.md
print/rustviz/: Cargo.toml
print/rustviz/src/: lib.rs  parse.rs
print/rustviz/src/examples/move_different_scope/: source.rs
print/rustviz/src/svg_generator/: data.rs
print/rustviz/src/svg_generator/svg_frontend/: code_panel.rs  svg_generation.rs
print/src/: annotated_source_gen.rs  expr_visitor.rs  expr_visitor_utils.rs  lib.rs  parser.rs  print.rs  utils.rs  visitor.rs
print/src/ir_mapper/: mod.rs
print/src/rustviz_library/src/: lib.rs  parse.rs
print/src/rustviz_library/src/svg_generator/: data.rs  hover_messages.rs
print/src/rustviz_library/src/svg_generator/svg_frontend/: svg_generation.rs  timeline_panel.rs
print/test-book/: output.txt
print/test-book/book/: searchindex.js
print/test-book/src/: chapter_1.md
print/test-crate/: lib.mir  result.txt  result2.txt
print/test-crate/src/: annotated_source.rs  lib.rs
print/tests/: advanced_deref.rs  advanced_deref2.rs  aliasing2.rs  basic_if.rs  mutAssignOp.rs  mutRef.rs  outBorrow.out  outScope.rs  outShadow.out  outStaticB.out  testShadow.rs  testplugin.rs
runner/: Dockerfile  rv-runner.sh
rust_viz/: Cargo.toml
rustviz2/: Cargo.toml
rustviz2-plugin/: Cargo.toml
rustviz2-plugin/src/: annotated_source_gen.rs  expr_visitor.rs  expr_visitor_utils.rs  mir_data.rs  plugin.rs  utils.rs  visitor.rs
rustviz2-plugin/src/rustviz_library/: rv.rs
rustviz2-plugin/src/svg_generator/: data.rs  hover_messages.rs
rustviz2-plugin/src/svg_generator/svg_frontend/: code_panel.rs  svg_generation.rs  timeline_panel.rs
rustviz2/src/: lib.rs
rustviz2/tests/: borrow.rs
rv-plugin/: Cargo.toml  README.md  rust-toolchain.toml
rv-plugin/src/: annotated_source_gen.rs  lib.rs  utils.rs  visitor.rs
rv-plugin/src/svg_generator/: data.rs
rv-plugin/src/svg_generator/svg_frontend/: svg_generation.rs  timeline_panel.rs
rv-serve/: Cargo.toml  README.md  index.html
rv-serve/ex-assets/: book.js
rv-serve/frontend/: index.html  package-lock.json  package.json  vite.config.ts
rv-serve/frontend/public/: index.html  manifest.json
rv-serve/frontend/public/ex-assets/: helpers.js
rv-serve/frontend/src/: App.tsx  ErrorCard.css  examples.ts  index.css  index.tsx
rv-serve/src/: main.rs
src/: annotated_source_gen.rs  expr_visitor.rs  expr_visitor_utils.rs  lib.rs  mir_data.rs  plugin.rs  utils.rs  visitor.rs
src/rustviz_library/: Cargo.toml
src/rustviz_library/src/: lib.rs
src/rustviz_library/src/svg_generator/: Cargo.toml  data.rs
src/rustviz_library/src/svg_generator/svg_frontend/: code_panel.rs  svg_generation.rs  timeline_panel.rs
test-book/: book.toml
test-book/book/: 404.html  index.html  print.html  searchindex.json
test-book/book/mdbook_plugin/: helpers.js
test-crate/: Cargo.toml  out.txt  output.txt  result.txt
test-crate/src/: lib.rs
tests/: basic_if2.rs  basic_if5.rs  basic_if7.rs  basic_match2.rs  outMove.out  outMutB.out  outNum.out
