[package]
name = "mdbook-rustviz"
version = "0.1.0"


edition = "2021"

[dependencies]
toml = "0.5"
mdbook = "=0.4.36"

log = "0.4"
env_logger = "0.9"
semver = "1.0"

serde_json = "1.0"
pulldown-cmark = "0.9.6"
pulldown-cmark-to-cmark = "10.0"
proc-macro2 = "*"
rust_viz = {path = "../rust_viz"}

[dependencies.clap]
version = "4.0"
features = ["std", "derive", "cargo", "unicode", "error-context"]

[dependencies.serde]
version = "1.0"
features = ["derive"]
