[package]
name = "mdbook-rustviz"
version = "0.1.0"
readme = "README.md"
edition = "2021"
license = "MIT"
repository = "https://github.com/rustviz/rustviz2"
description = "An mdbook preprocessor that allows users to embed RustViz visualizations into mdbook projects"

exclude = [
    "test-book/",
]

[dependencies]
toml = "0.5"
mdbook = "=0.4.36"

log = "0.4"
env_logger = "0.9"
semver = "1.0"

serde_json = "1.0"
pulldown-cmark = "0.9.6"
pulldown-cmark-to-cmark = "10.0"
proc-macro2 = "*"
rustviz2 = "0.1.0"

[dependencies.clap]
version = "4.0"
features = ["std", "derive", "cargo", "unicode", "error-context"]

[dependencies.serde]
version = "1.0"
features = ["derive"]
