[package]
name = "print-all-items"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.rust-analyzer]
rustc_private = true



[dependencies]
rustviz_library = {path = "./rustviz-library/rustviz_library"}
aquascope = {version = "0.1", path = "./aquascope"}
env_logger = "0.10"
clap = {version = "3", features = ["derive"]}
serde = {version = "1", features = ["derive"]}
anyhow = "1.0.0"
log = "0.4"
itertools = "0.10.5"
ts-rs = "6.2"
regex = "1"
fluid-let = "1.0"
rustc_utils = {version = "0.6.0-nightly-2023-04-12", features = ["graphviz", "ts-rs", "serde", "test"]}



[dev-dependencies]
insta = { version = "1.22.0", features = ["json", "yaml", "redactions"] }
test-log = "0.2.11"


[dependencies.rustc-plugin]
git = "https://github.com/cognitive-engineering-lab/rustc-plugin"
tag = "nightly-2023-04-12-v0.1.4"


# interpret module
miri = {git = "https://github.com/rust-lang/miri.git", rev = "35d6927663065d7fdeeaed45dda7e7748fc9f222"}
aquascope_workspace_utils = { version = "0.2", path = "../aquascope_workspace_utils" }

# testing utils
lazy_static = { version = "1.4", optional = true }

