[package]
name = "rustviz2"
version = "0.1.0"
edition = "2021"
authors = ["Andrew Mahler <mahleran@umich.edu>"]
repository = "https://github.com/rustviz/rustviz2"
license = "MIT"
description = "An interface that allows users to easily generate RustViz visualizations by utilizing the rustviz2-plugin"
readme = "README.md"

[dependencies]
rv-plugin = "0.1"
tempfile = "3"